Release MediaHub 0.3.0
